 * Fix: Properly disable color marker and blending option buttons in the layer properties dialog when you don't have permission to modify those. Thanks xxxx for reporting.
 * Fix: Make bezier curve tool work with touch drawing. Thanks Notester32 for reporting.
 * Fix: Make refreshing flipbook not reset the playback to the beginning. Thanks BulletPepper for reporting.

2025-11-18 Version 2.3.0
 * Fix: Don't show "exit layer view" notice when there's no canvas.
 * Fix: Properly remove the "unsaved changes" marker when saving to DPCS.
 * Feature: Add crop to selection action in the selection menu. Not any different to the resize canvas action, but there for discoverability.
 * Feature: Allow using stabilizer and smoothing with lasso select tool.
 * Fix: Don't remember interpolation mode on transform tool, since it's too easy to mess up art from having a stale mode set.
 * Fix: Make mipmap usage in hardware renderer configurable, since it causes performance issues with some graphics cards or drivers. Defaults to off. Thanks Bluestrings and Sinamer for reporting.
 * Fix: Make setting the hue slider to 359 in HSL space not turn out gray. Thanks BornIncompetence for reporting.
 * Fix: Make sliders not show a text selection cursor on Android when they're not in edit mode.
 * Fix: Make layer list items not show a text selection cursor on Android.
 * Fix: Correctly calculate the distance to move before a press is no longer considered a long-press. The calculation ended up with incorectly small values in most cases.
 * Fix: Improve long-press handling for context menus to act more like a real right-click would.
 * Fix: Don't delay long-presses by left-click or touch kinetic scrolling.
 * Feature: Add touch draw pressure settings, because apparently some screen tablets on Android use touch inputs instead of stylus ones. Thanks SurgeonTaco for suggesting.