@@ -30,6 +30,7 @@ Unreleased Version 2.3.1-pre
  * Fix: Properly disable color marker and blending option buttons in the layer properties dialog when you don't have permission to modify those. Thanks xxxx for reporting.
  * Fix: Make bezier curve tool work with touch drawing. Thanks Notester32 for reporting.
  * Fix: Make refreshing flipbook not reset the playback to the beginning. Thanks BulletPepper for reporting.
+ * Fix: Keep flipbook range to match the canvas range when it did so before even when closing the flipbook. Thanks BulletPepper for reporting.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
